RP-88 Fixing up some visuals on mobile.

--- a/source/css/scss/app/pages/portfolio.scss
+++ b/source/css/scss/app/pages/portfolio.scss
@@ -366,6 +366,7 @@
 
 		.section-title {
 			color: $kiva-green;
+			margin-left: 0.75rem;
 		}
 
 		.lent-count {
@@ -407,5 +408,23 @@
 			margin-right: 0.5rem;
 		}
 	}
+}
 
+.portfolio-collections {
+	.explainer {
+		margin-left: 0.25rem;
+		margin-right: 0.25rem;
+
+		h1 {
+			margin-top: 0;
+
+			@media #{$large-up} {
+				margin-top: 1.6666666667rem;
+			}
+		}
+
+		p {
+			margin-bottom: 0;
+		}
+	}
 }
